--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </a>
 
             <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
-              <img src="./Images/hackerrank.svg" class="mt-2 ml-4" height="11.5%" width="11.5%" alt="">
+              <img src="./Images/hackerrank.svg" class="mt-2 ml-4" height="12%" width="12%" alt="">
             </a>
 
             <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
@@ -236,7 +236,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> Collective </h4>
                 <h5 style="font-weight: 600;">Flutter, Node.js, Ethereum</h5>
                 <p class="mt-3 mb-3">An equity crowdfunding app managed with smart contracts that allows users to invest in projects with crypto in return of equity.</p>
-                <a href="https://github.com/sagarparker/Collective" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/Collective" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -248,7 +248,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> VoterChain.com </h4>
                 <h5 style="font-weight: 600;">React, Blockchain</h5>
                 <p class="mt-3 mb-3">A decentralized voting system created by implementing core blockchain concepts, React and Node.js.</p>
-                <a href="https://github.com/sagarparker/VoterChain" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/VoterChain" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -260,7 +260,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF">KrishiGruha</h4>
                 <h5 style="font-weight: 600;">React Native, Hedera </h5>
                 <p class="mt-3 mb-3">A platform made for users to buy or sell agricultural product online with crypto, created using React Native and Hedera.</p>
-                <a href="https://github.com/sagarparker/KrishiGruha" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/KrishiGruha" style="color: #017CFF;text-decoration:none;font-size:1.2em;"><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
