--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item mt-3 mt-md-0 ml-md-4 ">
+            <li class="nav-item mt-3 mt-md-0 ml-md-5 ">
               <a id="ske" onclick="skeFunc()">Skills & Experience</a>
             </li>
             <li class="nav-item mt-3 mt-md-0 ml-md-5">
@@ -80,18 +80,24 @@
                         <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" target="_blank" >
                             <img src="./Images/linkedin-brands.svg" class="mt-3 socialLinks" height="6%" width="6%" alt="">
                         </a>
+
                         <a href="https://github.com/sagarparker" target="_blank" style="text-decoration: none;">
-                            <img src="./Images/github-brands.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
+                          <img src="./Images/github-brands.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
+                        </a>
+
+
+                        <a href="https://unstoppabledomains.com/d/infy8dev.wallet" target="_blank" style="text-decoration: none;">
+                            <img src="./Images/bitcoin-brands.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
                         </a>
                       
 
                         <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
                           <img src="./Images/hackerrank.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
-                      </a>
+                        </a>
 
-                      <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
-                        <img src="./Images/file-solid.svg" class="mt-3 ml-3 socialLinks" height="4.8%" width="4.8%" alt="">
-                    </a>
+                        <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
+                          <img src="./Images/file-solid.svg" class="mt-3 ml-3 socialLinks" height="4.8%" width="4.8%" alt="">
+                        </a>
                         
                 </div>
                 <div class="col-5">
@@ -111,7 +117,11 @@
               <img src="./Images/linkedin-brands.svg" class="mt-2" height=11%" width="11%" alt="">
             </a>
             <a href="https://github.com/sagarparker" style="text-decoration: none;">
-                <img src="./Images/github-brands.svg" class="mt-2 ml-4" height="12%" width="12%" alt="">
+                <img src="./Images/github-brands.svg" class="mt-2 ml-4" height="12%" width="12%" alt=""2
+            </a>
+
+            <a href="https://unstoppabledomains.com/d/infy8dev.wallet" target="_blank" style="text-decoration: none;">
+              <img src="./Images/bitcoin-brands.svg" class="mt-2 ml-4 socialLinks" height="12%" width="12%" alt="">
             </a>
 
             <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
