--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
-            <a id="ske">Skills & Experience</a>
-          </li>
-          <li class="nav-item ">
             <a id="crt">Certifications</a>
           </li>
           <li class="nav-item ">
@@ -112,79 +109,10 @@
       </div>
     </div>
 
-    <!-- DIV2 -->
-    <div id="div2">
-        <div class="conainer">
-            <div class="row">
-              <div class="col-md-6 col-12 SK" >
-                <h5>Node.js / Javascript</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
-              </div>
-  
-              <div class="col-md-6 col-12 SK" >
-                <h5>React / React Native</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='75%'>
-              </div>
-            </div>
-
-            <div class="row mt-4">
-              <div class="col-md-6 col-12 SK" >
-                <h5>HTML / CSS / Bootstrap</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
-              </div>
-              <div class="col-md-6 col-12 SK" >
-                <h5>MongoDB / PostgreSQL</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
-              </div>
-            </div>
-
-            <div class="row mt-4 ">
-              <div class="col-md-6 col-12 SK" >
-                <h5>Flutter / Dart</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
-               
-              </div>
-
-              <div class="col-md-6 col-12 SK" >
-                <h5>Solidity, Web3</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
-
-              </div>
-            </div>
-
-            <div class="row mt-4">
-              <div class="col-md-6 col-12 SK" >
-                <h5>AWS / DigitalOcean </h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='60%'>
-              </div>
-              <div class="col-md-6 col-12 SK" >
-                <h5>Python</h5>
-                <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
-              </div>
-            </div>
-
-            <div class="row mt-5 " >
-              <div class="col-md-6 col-12" >
-                <h4>Software Engineer (Full-stack)</h4>
-                <h6 style="color:grey">Frshr technologies ( 06/2020 - 06/2021 )</h6>
-              </div>
-              <div class="col-md-6 col-12 mt-md-0 mt-5" >
-                <h4>Software Engineer (Full-stack)</h4>
-                <h6 style="color:grey">Marlin Protocol ( 12/2021 - Present )</h6>
-              </div>
-            </div>
-        </div>
-    </div>
-
     <div id="div3">
+      <div class="section-header">
+        Certifications
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 mt-1">
@@ -209,7 +137,10 @@
     </div>
 
     <div id="div4">
-      <div class="container">
+      <div class="section-header">
+        Projects
+      </div>
+      <div class="container prjCardHolder">
         <div class="row">
           <div class="col-12 col-md-4 ">
             <div class="prjCard">
@@ -218,7 +149,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF">Collective</h4>
                 <h5 style="font-weight: 600;">Flutter, Node.js, Ethereum</h5>
                 <p class="mt-3 mb-3">An equity crowdfunding app managed with smart contracts that allows users to invest in projects with crypto.</p>
-                <a href="https://github.com/sagarparker/Collective" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/Collective" target="_blank" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -230,7 +161,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF">VoterChain</h4>
                 <h5 style="font-weight: 600;">React, Blockchain</h5>
                 <p class="mt-3 mb-3">A decentralized voting system created by implementing core blockchain concepts, React and Node.js.</p>
-                <a href="https://github.com/sagarparker/VoterChain" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/VoterChain" target="_blank" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -242,7 +173,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF">KrishiGruha</h4>
                 <h5 style="font-weight: 600;">React Native, Hedera </h5>
                 <p class="mt-3 mb-3">A platform made for users to buy or sell agricultural product online with crypto, created using React Native and Hedera.</p>
-                <a href="https://github.com/sagarparker/KrishiGruha" style="color: #017CFF;text-decoration:none;font-size:1.2em;"><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/KrishiGruha" target="_blank" style="color: #017CFF;text-decoration:none;font-size:1.2em;"><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
