--- a/certifications.html
+++ b/certifications.html
@@ -36,20 +36,25 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 imageHolder">
+              <img src="./Images/DSA.jpg" class="imageSize"  alt="">
+            </div>
+            <div class="col-12 imageHolder">
+              <img src="./Images/SpringBootCourse.jpg" class="imageSize"  alt="">
+            </div>
+            <div class="col-12 imageHolder">
+              <img src="./Images/python.jpg" class="imageSize" alt="">
+            </div>
+            <div class="col-12 imageHolder">
               <img src="./Images/wd.jpg" class="imageSize"  alt="">
             </div>
             <div class="col-12 imageHolder">
               <img src="./Images/BlockchainCertificate.jpg" class="imageSize"  alt="">
             </div>
-            <div class="col-12 imageHolder">
-              <img src="./Images/DSA.jpg" class="imageSize"  alt="">
-            </div>
+
             <div class="col-12 imageHolder">
               <img src="./Images/Flutter.jpg" class="imageSize"  alt="">
             </div>
-            <div class="col-12 imageHolder">
-              <img src="./Images/python.jpg" class="imageSize" alt="">
-            </div>
+
             <div class="col-12 imageHolder">  
                 <img src="./Images/ds.jpg" class="imageSize"  alt="">
             </div>
