--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 </div>
                 <div class="col-5">
-                    <img src="./Images/mainDiv.svg" class="responsive"  alt="failed to load image">
+                    <img src="./Images/mainDiv.svg" class="responsive"  alt="mainSvg">
                 </div>
             </div>
         </div>
@@ -116,10 +116,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/wd.jpg" width="100%" height="100%" alt="">
+            <img src="./Images/DSA.jpg" width="100%" height="100%" alt="">
           </div>
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/Flutter.jpg" width="100%" height="100%" alt="">
+            <img src="./Images/SpringBootCourse.jpg" width="100%" height="100%" alt="">
           </div>
 
         </div>
@@ -129,7 +129,7 @@
             <img src="./Images/python.jpg" width="100%" height="100%" alt="">
           </div>
           <div class="col-12 col-md-6 mt-1 p-3 p-md-3" >
-            <img src="./Images/BlockchainCertificate.jpg" width="100%" height="100%" alt="">
+            <img src="./Images/java.jpg" width="100%" height="100%" alt="">
           </div>
           <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-5 mt-md-3 certificationslink">+ Click to checkout all my certifications</a>
         </div>
