--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 
                 <div class="col-6 main-div" style="padding-left: 7.5%;" >              
                         <p style="font-size: 3.2vw;font-weight: bold;">Hello,I'm Sagar Parker,</br>
-                           aka <a style="color: #017CFF;" target="_blank" href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/26304260890194668086448018549224152377627853406219754709862833022378186015454">infy8.eth</a>.</p>
+                           aka infy8</p>
                         <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Software Engineer</span> and an advocate of a decentralized internet.</p>
                         <div class="socialLinksRow">
                           <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3/" style="text-decoration: none;" target="_blank" >
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-12 p-3">
             <p style="font-size: 14vw;font-weight: bold;margin-top: 37%;">Hello,I'm Sagar Parker, </br>
-              aka <a style="color: #017CFF;" target="_blank" href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/26304260890194668086448018549224152377627853406219754709862833022378186015454">infy8.eth</a>.
+              aka infy8
             </p>
             <p style="font-size: 8vw;margin-top:-10px"><span style="color: #017CFF;">Software Engineer</span></p>
             <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3/" style="text-decoration: none;" >
